src/objects/MMD_Con_Office_Contact__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Office Contacts</description>
    <fields>
        <fullName>BOFFICE__c</fullName>
        <externalId>true</externalId>
        <label>Branch Office Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Office__c</fullName>
        <label>Branch Office</label>
        <referenceTo>MMD_Con_Office__c</referenceTo>
        <relationshipLabel>Office Contacts</relationshipLabel>
        <relationshipName>R00N30000003AWADEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CONTID__c</fullName>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City_State__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Branch Office</relationshipLabel>
        <relationshipName>R00N30000003AWAGEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Office Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Office Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>